Form tabs - different table:debug

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_two_columns.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_two_columns.vm
@@ -27,7 +27,7 @@
     #if($formTabs.size() > 0)
       #parse("gui/reports_and_tables/tabs/form_tabber.vm")
     #end
-    <div #if(($formStyle == "TWO_COLUMNS") && !$parentTable) class="two_cols" #end #if($theFormTable && (!$theFormTable.equals($sessionTable))) style="display:none" data-formtable="$formTable" #end id="form_tabs_$sessionTable.getInternalTableName()_$sessionTable.getInternalTableName()"> <!-- start of sections container -->
+    <div class="tab_container #if(($formStyle == "TWO_COLUMNS") && !$parentTable) two_cols #end" #if($theFormTable && (!$theFormTable.equals($sessionTable))) style="display:none" #end id="form_tabs_$sessionTable.getInternalTableName()_$sessionTable.getInternalTableName()"> <!-- start of sections container -->
     #set($firstSection = false)
   #end
   #if($formStyle == 'TWO_COLUMNS')
@@ -43,7 +43,7 @@
   #if($field.equals($firstField))
     #if((!$hasSections) && ($formTabs.size() > 0))
       #parse("gui/reports_and_tables/tabs/form_tabber.vm")
-      <div class="block #if(!$parentTable) two_cols non_section #end" #if($theFormTable && (!$theFormTable.equals($sessionTable))) style="display:none" data-formtable="$formTable" #end id="form_tabs_$sessionTable.getInternalTableName()_$sessionTable.getInternalTableName()">
+      <div class="block tab_container #if(!$parentTable) two_cols non_section #end" #if($theFormTable && (!$theFormTable.equals($sessionTable))) style="display:none" #end id="form_tabs_$sessionTable.getInternalTableName()_$sessionTable.getInternalTableName()">
     #else
       <div class="block #if(!$parentTable) two_cols non_section #end">
     #end
