--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/edit_content.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/edit_content.vm
@@ -46,7 +46,7 @@
     </div> <!-- end of two sections container -->
   #end
   #foreach($formTab in $formTabs)
-    <div style="display:none; min-height:15em" id="form_tabs_$sessionTable.getInternalTableName()_$formTab.getTable().getInternalTableName()">
+    <div style="display:none; min-height:15em" class="tab_container" id="form_tabs_$sessionTable.getInternalTableName()_$formTab.getTable().getInternalTableName()">
     </div>
   #end
 #end
