Form tabs - different table:debug

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/tab_content.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/tab_content.vm
@@ -53,6 +53,7 @@
       #end
     #end
     #if($found)
+      Form tab is $formTab<p>
 	  #set($datarows = $view.getReportDataRows($selectorReport,50,$filter,true))
 	  #if($datarows.size() > 1)
 	    #parse("gui/reports_and_tables/tabs/tab_selector_report.vm")
