--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/tab_selector_report.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/tab_selector_report.vm
@@ -28,7 +28,7 @@
   #end
 #end
 
-#if((!$sessionRowFound) && (!$grandchild) && (!$formTable))
+#if((!$sessionRowFound) && (!$grandchild) && ($lookupRowId))
   ## Revert to the first item in the list
   #set($sessionRowId = $datarows.get(0).getRowId())
 #end
