--- a/gtpb_clientside/resources/mobile/override.css
+++ b/gtpb_clientside/resources/mobile/override.css
@@ -146,6 +146,7 @@ table#reportData tr.rowb  {
 #pane3_related {
   -moz-column-count: 3;
   -webkit-column-count: 3;
+  -ms-column-count: 3;
   column-count: 3;
   font-size: 8pt;
   color: #666666;
