--- a/gtpb_clientside/resources/preview/slides.css
+++ b/gtpb_clientside/resources/preview/slides.css
@@ -250,6 +250,7 @@ pre input[type="range"] {
 .two-column {
   -webkit-column-count: 2;
   -moz-column-count: 2;
+  -ms-column-count: 2;
   column-count: 2;
 }
 
