Debug new button in grandchild blocks

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/tab_grandchild_blocks.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/tab_grandchild_blocks.vm
@@ -25,7 +25,8 @@
 
 #foreach($gcFormTab in $gcFormTabs)
   #set($selectorReport = $gcFormTab.getSelectorReport())
-  #set($sessionRowId = -1) ## $sessionData.getRowId($gcFormTab.getTable()))
+  ## Stop a particular record from being highlighted
+  ###set($sessionRowId = -1) ## $sessionData.getRowId($gcFormTab.getTable()))
   #set($datarows = $view.getReportDataRows($selectorReport,50,$filter,true))
 	<div class="block grandchildren">
 		#set($gcFormTabTableInternalName = $gcFormTab.getTable().getInternalTableName())
