Add attachment type class to images

--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/file.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/file.vm
@@ -74,7 +74,7 @@
     #if($fieldValueObject.isImage())
     ## #if($userCanEdit)<br />#end
       <a href="AppController.servlet?return=gui/resources/image&set_custom_string=true&key=img_src&value=$downloadUrl" target="_blank">
-      <img border="0" src="$downloadUrl.500.$fieldValueObject.getExtension()" class="$fieldValueObject.getAttachmentType().name().toLowerCase()" style="float:left; max-width: 100%; border-radius: 0.5em"/>
+      <img border="0" src="$downloadUrl.500.$fieldValueObject.getExtension()" class="$field.getAttachmentType().name().toLowerCase()" style="float:left; max-width: 100%; border-radius: 0.5em"/>
       </a>
       #set($sectionHasImage = true)
     #end
