--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/report_fields/option_sets/calculations_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/report_fields/option_sets/calculations_data.vm
@@ -79,7 +79,7 @@
   #set($reportFieldClass = $reportField.getClass().getSimpleName())
   #if($reportFieldClass.equals("ReportCalcFieldDefn"))
     #if(!$reportField.referencesCalcFromOtherReport())
-    <a href="javascript:showEditCalc('$reportField.getInternalFieldName');">edit $reportField</a><br />
+    <a href="javascript:showEditCalc('$reportField.getInternalFieldName()');">edit $reportField</a><br />
     <div class="calculation_form" style="display:none" id="editcalc_$reportField.getInternalFieldName()">
     <FORM action="AppController.servlet" target="pane_2" method="post">
       		<input type=hidden name=return value="gui/reports_and_tables/report_data" />
