Make images work in reports that are from a different table to that of the file field: correct row ID debug

--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2_body.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2_body.vm
@@ -45,7 +45,9 @@ $viewTools.startTimer("gui/pane2/pane2_body")
 #set($fieldNum = 0)
 #set($pKeyFieldNums = {})
 #foreach($field in $fields)
+  $viewTools.log("Field $field")
   #if($field.equals($field.getTableContainingField().getPrimaryKey()))
+    $viewTools.log("Table $field.getTableContainingField()")
     #set($success = $pKeyFieldNums.put($field.getTableContainingField(),$fieldNum))
   #end
   #set($fieldNum = $fieldNum + 1)
