--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2_body.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2_body.vm
@@ -109,7 +109,7 @@ $viewTools.startTimer("gui/pane2/pane2_body")
           #if($field.getTableContainingField().equals($sessionTable))
             #set($fieldId = $thisUniqueId)
           #else
-            $viewTools.log("Table $field.getTableContainingField() is at value $pKeyFieldNums.get($field.getTableContainingField()), from $pKeyFieldNums")
+            ##$viewTools.log("Table $field.getTableContainingField() is at value $pKeyFieldNums.get($field.getTableContainingField()), from $pKeyFieldNums")
             #set($fieldId = $thisValues.get($pKeyFieldNums.get($field.getTableContainingField())))
           #end
           #set($srcUrl = "/agileBase/uploads/$field.getTableContainingField().getInternalTableName()/$field.getInternalFieldName()/$fieldId/$fileValue.40.$fileValue.getExtension()")
@@ -168,7 +168,6 @@ $viewTools.startTimer("gui/pane2/pane2_body")
       <td class="trailing">&nbsp;</td>
 		#end
   </tr>
-
 #end ## end loop through report data rows
 ## a closing row
 ## also include count of records returned for the UI to pick up and display
