Tabs with new blank parent: don't load tab chooser report - debug

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/tab_content_table.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/tab_content_table.vm
@@ -24,6 +24,7 @@
 #if(!$parentTable)
   #set($parentTable = $sessionData.getTable())
 #end
+Table data row is $tableDataRow<p>
 #if(!$tableDataRow)
   #set($tableDataRow = $view.getTableDataRow($sessionTable, $sessionRowId))
 #end
